# repostats

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  pyproject.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: codeql.yaml  pr.yml
docs/: api_versioning.md  multiconsumer_queue.md  notification_system.md  service_registry.md  streaming_scanner.md
docs/plugin_api/: cli_integration.md  index.md  plugin_functions.md  plugin_info.md  scan_requires.md  system_architecture.md
docs/plugins/: dump.md
openspec/: project.md
openspec/adr/: ADR-0001-public-api-export-boundaries.md  ADR-0002-plugin-facade-lifecycle-boundaries.md  ADR-0003-notification-manager-global-event-bus.md  ADR-0004-allow-dead-code-policy.md
openspec/changes/audit-allow-dead-code/: design.md  proposal.md  tasks.md
openspec/changes/cleanup-restart-project/: design.md  proposal.md  tasks.md
openspec/changes/define-external-plugin-contract/: proposal.md
openspec/changes/implement-external-plugin-loading/: proposal.md
openspec/changes/introduce-service-facades/: design.md  proposal.md  tasks.md
openspec/changes/refactor-gix-repository/: design.md  proposal.md  tasks.md
openspec/changes/refactor-recursion-methods/: design.md  proposal.md  tasks.md
openspec/changes/refactor-scannertask-init/: design.md  tasks.md
openspec/changes/restore-nextest-validation/: proposal.md
openspec/changes/restrict-scanner-test-api/: proposal.md
openspec/changes/separate-cli-from-library/: proposal.md
openspec/changes/upgrade-toolchain-and-dependencies/: design.md  proposal.md  tasks.md
plugins/: test.yaml
scripts/: b  bt  build-verify.sh  clean  increment_api_version.sh  t
src/: lib.rs  main.rs
src/app/: event_controller.rs  mod.rs  spinner.rs  startup.rs  tests.rs
src/app/cli/: api.rs  args.rs  command_segmenter.rs  config.rs  date_parser.rs  display.rs  global_args.rs  initial_args.rs  mod.rs  parsing.rs  segmenter.rs  validation.rs
src/app/cli/tests/: mod.rs  (+5 more)
src/common/: logging.rs  mod.rs
src/core/: cleanup.rs  controller.rs  date_parser.rs  error_handling.rs  logging.rs  mod.rs  pattern_parser.rs  query.rs  retry.rs  services.rs  shutdown.rs  strings.rs  styles.rs  sync.rs  tests.rs  time.rs  validation.rs  version.rs
src/notifications/: api.rs  error.rs  event.rs  manager.rs  mod.rs  traits.rs
src/notifications/tests/: event_subscription_and_handling.rs  mod.rs  plugin_data_events.rs
src/plugin/: activation.rs  api.rs  args.rs  context.rs  controller.rs  data_coordinator.rs  data_export.rs  discovery.rs  error.rs  error_handling.rs  error_tests.rs  events.rs  initialization.rs  manager.rs  mod.rs  registry.rs  settings.rs  traits.rs  types.rs  unified_discovery.rs
src/plugin/builtin/: api.rs  dump.rs  mod.rs
src/plugin/tests/: compatibility.rs  coordination.rs  error.rs  mod.rs  utils.rs
src/queue/: api.rs  concurrent_tests.rs  consumer.rs  consumer_tests.rs  edge_case_tests.rs  error.rs  grouping_tests.rs  integration_tests.rs  internal.rs  lifecycle_tests.rs  manager.rs  memory_tests.rs  message.rs  mod.rs  publisher.rs  publisher_tests.rs  tests.rs  traits.rs  typed.rs  types.rs
src/queue/tests/: concurrent.rs  consumer.rs  core_functionality.rs  edge_cases.rs  grouping.rs  integration.rs  lifecycle.rs  manager.rs  memory.rs  mod.rs  publisher.rs  typed.rs
src/scanner/: api.rs  error.rs  manager.rs  manager_tests.rs  mod.rs  types.rs
src/scanner/checkout/: manager.rs  mod.rs
src/scanner/task/: core.rs  events.rs  git_ops.rs  mod.rs  queue_ops.rs
src/scanner/tests/: helpers.rs  manager.rs  mod.rs  types.rs
tests/: app_services.rs  end_to_end_cli.rs  scanner_integration.rs
tests/cli/: argument_parsing.rs  checkout.rs  filtering.rs  mod.rs  path_handling.rs  plugin_config.rs  repository_handling.rs  toml_config.rs  validation.rs
tests/common/: fixtures.rs  mod.rs  scanner_helpers.rs  test_helpers.rs
tests/scanner/: commit_processing.rs  manager.rs  messaging.rs  mod.rs  repository.rs  tasks.rs
(+62 files in other folders)
