[package]
name = "repostats"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata]
plugin_api_version = 20250727

[[bin]]
name = "repostats"
path = "src/main.rs"

[lib]
name = "repostats"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4.5", features = ["derive", "string", "color"] }
gix = { version = "0.73", features = ["blocking-network-client"] }
gix-url = "0.32.0"
gix-transport = { version = "0.48.0", features = ["blocking-client", "http-client-reqwest-rust-tls"] }
gix-protocol = "0.51"
gix-object = "0.50"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
colored = "3.0"
dirs = "6.0"
unicode-segmentation = "1.12.0"
log = "0.4.27"
flexi_logger = "0.31"
chrono = "0.4"
glob = "0.3"
inventory = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
thiserror = "2.0"
futures = "0.3"
regex = "1"
once_cell = "1.20"
libc = "0.2"
prettytable-rs = "0.10"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tera = "1.20"
strum = "0.27.2"
strum_macros = "0.27.2"

[build-dependencies]
chrono = "0.4"
toml = "0.9"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
