[package]
name = "repostats"
version = "0.1.0"
edition = "2021"
authors = [
    "David Nugent <davidn@uniquode.io>"
]
build = "build.rs"

[package.metadata]
plugin_api_version = 20250727

[[bin]]
name = "repostats"
path = "src/main.rs"

[lib]
name = "repostats"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "string", "color"] }
colored = "3.0"
dashmap = "6.1.0"
dirs = "6.0"
flexi_logger = "0.31"
futures = "0.3"
gix = { version = "0.73", features = ["blocking-network-client"] }
gix-object = "0.50"
gix-protocol = "0.51"
gix-transport = { version = "0.48.0", features = ["blocking-client", "http-client-reqwest-rust-tls"] }
gix-url = "0.32.0"
glob = "0.3"
inventory = "0.3"
libc = "0.2"
log = "0.4.27"
once_cell = "1.20"
prettytable-rs = "0.10"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
sha2 = "0.10"
shellexpand = "3.1.1"
strum = "0.27.2"
strum_macros = "0.27.2"
tera = "1.20"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
toml = "0.9"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
libloading = "0.8.8"

[build-dependencies]
chrono = "0.4"
toml = "0.9"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
